<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2014 Google Inc. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

  <!-- The minimum subtitle font size. -->
  <dimen name="subtitle_minimum_font_size">13sp</dimen>

  <string name="select_an_action">Select an action&#8230;</string>
  <string name="overflow">Overflow</string>
  <string name="fullscreen_button">Fullscreen</string>
  <string name="time_duration">Duration</string>
  <string name="seekbar">Seekbar</string>
  <string name="time_current">Current time</string>
  <string name="pause">Pause</string>
  <string name="logo_image">Logo image</string>

  <!-- The user visible name of the application. [CHAR LIMIT=20] -->
  <string name="application_name">ExoPlayer Demo</string>

  <string name="enable_background_audio">Play in background</string>

  <string name="video">Video</string>

  <string name="audio">Audio</string>

  <string name="text">Text</string>

  <string name="logging">Logging</string>

  <string name="logging_normal">Normal</string>

  <string name="logging_verbose">Verbose</string>

  <string name="retry">Retry</string>

  <string name="off">[off]</string>

  <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

  <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

  <string name="error_drm_unknown">An unknown DRM error occurred</string>

  <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

  <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

  <string name="error_querying_decoders">Unable to query device decoders</string>

  <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

  <string name="storage_permission_denied">Permission to access storage was denied</string>
</resources>
