<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2014 Google Inc. All rights reserved.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/middle_section"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top_chrome"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="top"
        android:background="@color/transparent_black_hex_8"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/logo_image"
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@+id/actions_container"
            android:layout_toRightOf="@id/logo_image"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:id="@id/actions_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded" />

    </RelativeLayout>

    <ImageButton
        android:contentDescription="@string/pause"
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_action_pause_large" />

    <LinearLayout
        android:id="@+id/bottom_chrome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:background="@color/transparent_black_hex_8"
        android:orientation="horizontal">

        <TextView
            android:contentDescription="@string/time_current"
            android:id="@+id/time_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white"
            tools:ignore="RtlHardcoded" />

        <SeekBar
            android:contentDescription="@string/seekbar"
            android:id="@+id/mediacontroller_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:contentDescription="@string/time_duration"
            android:id="@+id/time_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp"
            android:textColor="@android:color/white" />

        <ImageButton
            android:contentDescription="@string/fullscreen_button"
            android:id="@+id/fullscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_full_screen"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</FrameLayout>
